--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,17 @@ pytest-mock = "*"
 
 [tool.poetry.group.docs.dependencies]
 # Main documentation-as-code (HTML/PDF generator)
-Sphinx = "4.*"
+Sphinx = "*"
 # Read the docs (pretty) theme for sphinx
-sphinx-rtd-theme = "1.*"
+sphinx-rtd-theme = "*"
 # Markdown parser for sphinx: Sphinx uses "RST" files, this adds markdown
 myst-parser = "*"
 # Automatic Python module docs (javadoc-style)
 sphinx-autoapi = "*"
+# Plantuml diagrams
+sphinxcontrib-plantuml = "*"
+# Sphinx-needs branch, to prove matplotlib not there
+sphinx-needs = { git = "https://github.com/OverkillGuy/sphinxcontrib-needs.git", branch = "optional-matplotlib-rebased" }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
